2007-09-04  Chris Morley

	* include/inchi_api.h, windows-vc2005/libinchi.dll,
	windows-vc2005/libinchi.lib: updated to v1.02 beta
	
	* src/formats/inchiformat.cpp: added option to output InChIKey.
	Windows only until the appropriate files for UNIX are installed.

2007-09-03  Chris Morley

	* include/zlib.h, iconv.h, zconf.h: Added.
	Needed for Windows build. I hope they do not interfere 
	with unix builds
	
	* src/formats/xml/cmlreactformat.cpp: Added
	
	* src/formats/pngformat.cpp: remove include to insizes.h
	
	Update Windows project files
	* windows-vc2005/OBComLn/OBComLn.vcproj
	* windows-vc2005/openbabel.sln
	* windows-vc2005/OpenBabelDLL/OpenBabelDLL.vcproj

2007-09-03  Chris Morley

	* src/formats/rxnformat.cpp: removed spurious first line of file
	which gave misleading comiler error messages. Make references to
	tr1 etc consistent with other reaction formats
	
	* include/openbabel/reaction.h: make #include "tr1/memory"
	conditional.
	
	* src/formats/pngformat.cpp: Make independent of compiler and
	platform, esp size of int. Add WriteMolecule to embed into a
	PNG file. Would be better in a program that also wrote PNG files!
	
2007-09-03  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* Merged in changes from 2.1.x branch.

2007-09-02  Chris Morley
	
	* src/formats/chemkinformat.cpp: removed warning and improved
	when writing with the simple option.

	* src/formats/freefracformat.cpp:no longer use TrimErrors which
	caused errors on Windows.

	* src/math/spacegroup.cpp: replace stdargs.h by more modern 
	cstdarg

	* src/mol.cpp(Separate): use code which does not crash when
	Atom4Refs from OBChiralData unaccountably has fewer than 4 
	elements.

2007-09-02  Jean Brefort  <jean.brefort@normalesup.org>

	* src/fingerprints/finger3.cpp: fixed compilation with g++.

2007-09-02  Jean Brefort  <jean.brefort@normalesup.org>

	* configure.in: applied patch from Klaus Heinz fixes #1786288.

2007-08-30  Chris Morley
