@@ -1,3 +1,14 @@
+2007-09-06  Geoffrey Hutchison  <babel@geoffhutchison.net>
+
+	* src/forcefield.cpp: Small improvements to LineSearch and
+	ConjugateGradientsTakeNSteps for performance improvement. In
+	particular, reset the CG direction periodically and only print
+	output every 10 steps.
+
+	* src/forcefields/forcefieldghemical.cpp: Smarter VDW calculation
+	-- minimize the number of multiplies. Not much of an improvement,
+	unfortunately.
+
 2007-09-04  Chris Morley
 
 	* include/inchi_api.h, windows-vc2005/libinchi.dll,
